# Survivor

Module_Python/Python_Module_00/ex0/: ft_hello_garden.py
Module_Python/Python_Module_00/ex1/: ft_garden_name.py
Module_Python/Python_Module_00/ex2/: ft_plot_area.py
Module_Python/Python_Module_00/ex3/: ft_harvest_total.py
Module_Python/Python_Module_00/ex4/: ft_plant_age.py
Module_Python/Python_Module_00/ex5/: ft_water_reminder.py
Module_Python/Python_Module_00/ex6/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
Module_Python/Python_Module_00/ex7/: ft_seed_inventory.py
Module_Python/Python_Module_01/ex0/: ft_garden_intro.py
Module_Python/Python_Module_01/ex1/: ft_garden_data.py
Module_Python/Python_Module_01/ex2/: ft_plant_growth.py
Module_Python/Python_Module_01/ex3/: ft_plant_factory.py
Module_Python/Python_Module_01/ex4/: ft_garden_security.py
Module_Python/Python_Module_01/ex5/: ft_plant_types.py
Module_Python/Python_Module_01/ex6/: ft_garden_analytics.py
Module_Python/Python_Module_02/ex0/: ft_first_exception.py
Module_Python/Python_Module_02/ex1/: ft_raise_exception.py
Module_Python/Python_Module_02/ex2/: ft_different_errors.py
Module_Python/Python_Module_06/: ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_5.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
Module_Python/Python_Module_07/: battle.py  capacitor.py  tournament.py
Module_Python/Python_Module_08/ex1/: loading.py  pyproject.toml  requirements.txt
(+42 files in other folders)
