[project]
name = "ex1"
version = "0.1.0"
description = "project"
authors = [
    {name = "mamy-and"}
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy>=2.2,<3.0",
    "pandas>=2.2,<3.0",
    "requests>=2.32,<3.0",
    "matplotlib>=3.8,<3.9"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"